--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .title {
   font-size: 24px;
   text-transform: uppercase;
@@ -36,3 +44,4 @@
   border-radius: 8px;
   flex: 1;
 }
+
